Fix bug where error bar is hidden behind login bar in register page

--- a/static/css/logreg.css
+++ b/static/css/logreg.css
@@ -37,7 +37,7 @@ body {
 /* max is bad at cs */
 #error {
 	position: absolute;
-	top: 35%;
+	top: 28%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	color: red;
